Fixes #332 - Setup cutoff rules never gets highlighted

--- a/web/static/css/_ncd.scss
+++ b/web/static/css/_ncd.scss
@@ -524,6 +524,11 @@ i.survey-status {
     margin-right: -20px;
   }
 }
+.wizard-content {
+  > div {
+    min-height: calc(100vh - 148px);
+  }
+}
 
 .step-mode {
   position: relative;
